<resources>

    <!-- LOGIN -->
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="logIn">ENTRAR</string>

    <!-- MENU PRINCIPAL -->
    <string name="app_name">05_Dashboard_Menu</string>
    <string name="calculator_name">Calculadora</string>
    <string name="contacts_name">Contactos</string>
    <string name="canineAge_name">Edad Canina</string>
    <string name="quizzes_name">Formulario</string>
    <string name="maps_name">Mapas</string>
    <string name="gallery_name">Galería de fotos</string>
    <string name="restaurant_name">Restaurantes</string>
    <string name="setting_name">Herramientas</string>
    <string name="market_name">Marcador Baloncesto</string>
    <string name="music_name">Música</string>

    <!-- MI EDAD CANINA -->
    <string name="edadCanina_title">EDAD CANINA</string>
    <string name="result_format">Si fueras un perro, tu edad sería %d años</string>
    <string name="you_have_to_insert_an_age">Inserta una edad válida.</string>
    <string name="calculate">Calcular</string>
    <string name="how_old_are_you">¿Cuántos años tienes?</string>
    <string name="your_age">Tu edad</string>

    <!-- CALCULADORA -->
    <string name="calculator_title">CALCULADORA</string>
    <string name="welcome">Bienvenido a mi calculadora</string>
    <string name="ask_for_number1">Escribe el primer número</string>
    <string name="ask_for_number2">Escribe el segundo número</string>
    <string name="number1">Número 1</string>
    <string name="number2">Número 2</string>
    <string name="btn_text_addition">Sum</string>
    <string name="btn_text_subtraction">Res</string>
    <string name="btn_text_multiplication">Mult</string>
    <string name="btn_text_division">Div</string>
    <string name="result">El resultado de la operacion es: </string>
    <string name="inputNumber">Debes introducir un numero </string>

    <!-- QUIZZES -->
    <string name="quizzes_title">CUESTIONARIO</string>
    <string name="siguiente_pregunta">Siguiente</string>
    <string name="toas_info">Debes seleccionar una opcion</string>

    <!-- GALERIA -->
    <string name="galeria_title">GALERIA</string>

    <!-- MAPAS -->
    <string name="mapas_title">MAPAS</string>

    <!-- RESTAURANTES -->
    <string name="restaurantes_title">RESTAURANTES</string>

    <!-- HERRAMIENTAS -->
    <string name="setting_title">HERRAMIENTAS</string>

    <!-- CONTACTOS -->
    <string name="contactos_title">CONTACTOS</string>

    <!-- MARCADOR BALONCESTO -->
    <string name="market_title">MARCADOR BALONCESTO</string>

    <!-- PROGRAMMER -->
    <string name="music_title">LISTA DE REPRODUCCIÓN</string>

    <!-- SALIR -->
    <string name="exit_name">Salir</string>


</resources>