<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".CalculadoraActivity">


        <TextView
            android:id="@+id/text_view_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="26dp"
            android:padding="16dp" />

        <ImageView
            android:id="@+id/img_cal"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/calculadora_icon"
            android:padding="2dp" />

        <TextView
            android:id="@+id/text_view_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ask_for_number1"
            android:textSize="14dp"
            android:padding="8dp" />

        <EditText
            android:id="@+id/edit_text_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/number1"
            android:padding="8dp" />

        <TextView
            android:id="@+id/text_view_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ask_for_number2"
            android:textSize="14dp"
            android:padding="8dp" />

        <EditText
            android:id="@+id/edit_text_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/number2"
            android:padding="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="4dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/violet"
                android:text="@string/btn_text_addition" />

            <Button
                android:id="@+id/btn_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="4dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/yellow"
                android:text="@string/btn_text_subtraction" />

            <Button
                android:id="@+id/btn_mul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="4dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/green"
                android:text="@string/btn_text_multiplication" />

            <Button
                android:id="@+id/btn_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="4dp"
                android:backgroundTint="@color/darkblue"
                android:layout_gravity="center"
                android:text="@string/btn_text_division" />
        </LinearLayout>


        <TextView
            android:id="@+id/text_view_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/result"
            android:padding="6dp"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/text_view_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:padding="8dp"
            android:textColor="@color/black" />

    </LinearLayout>

</layout>