<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/infinity"
        android:padding="20dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/home" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_user"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/img_logo"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/icon_black" />

                <EditText
                    android:id="@+id/editText_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/img_user"
                    android:layout_gravity="center"
                    android:layout_marginRight="16dp"
                    android:layout_toEndOf="@+id/img_user"
                    android:backgroundTint="@color/white"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_password"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/img_user"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/pass_white" />

                <EditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/img_password"
                    android:layout_gravity="center"
                    android:layout_marginRight="16dp"
                    android:layout_toEndOf="@id/img_password"
                    android:backgroundTint="@color/white"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_Entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/blackblue"
            android:padding="10dp"
            android:text="@string/logIn" />


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>